--- a/package.json
+++ b/package.json
@@ -10,10 +10,26 @@
   "author": "lanjie",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.7.5",
     "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-decorators": "^7.7.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.7.4",
+    "@babel/plugin-proposal-function-sent": "^7.7.4",
+    "@babel/plugin-proposal-json-strings": "^7.7.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.7.4",
+    "@babel/plugin-proposal-throw-expressions": "^7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@babel/plugin-syntax-import-meta": "^7.7.4",
+    "@babel/plugin-syntax-jsx": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-stage-2": "^7.0.0-rc.2",
+    "@babel/preset-stage-3": "^7.0.0-rc.3",
+    "@babel/runtime": "^7.7.7",
+    "@vue/babel-plugin-transform-vue-jsx": "^1.1.2",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.1",
     "html-webpack-plugin": "^3.2.0",
@@ -28,7 +44,10 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.7.0",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.15.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   }
