--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@babel/plugin-syntax-import-meta": "^7.7.4",
     "@babel/plugin-syntax-jsx": "^7.7.4",
+    "@babel/plugin-transform-classes": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-stage-2": "^7.0.0-rc.2",
@@ -47,7 +48,7 @@
     "@babel/polyfill": "^7.7.0",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
     "vue": "^2.6.11",
-    "vue-i18n": "^8.15.1",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   }
