--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mobile Project Initial chemical tool ",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config=build/webpack.dev.tool.js",
+    "start": "webpack-dev-server --inspect-brk --config=build/webpack.dev.tool.js",
     "build": "webpack --config ./build/webpack.dev.tool.js"
   },
   "author": "lanjie",
@@ -29,17 +29,23 @@
     "@babel/preset-stage-3": "^7.0.0-rc.3",
     "@babel/runtime": "^7.7.7",
     "@vue/babel-plugin-transform-vue-jsx": "^1.1.2",
+    "@vux/loader": "^2.0.0-rc4",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.1",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^5.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-url": "^8.0.0",
     "sass-resources-loader": "^2.0.1",
     "units-loader": "^1.0.7",
+    "url-loader": "^3.0.0",
     "vue-loader": "^15.8.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
+    "vux-loader": "^1.2.9",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
@@ -47,9 +53,11 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
+    "lib-flexible": "^0.3.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vux": "^2.9.4"
   }
 }
