--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --inspect-brk --config=build/webpack.dev.tool.js",
+    "dome": "webpack-dev-server --inspect-brk --config=build/webpack.dome.dev.js",
     "build": "webpack --config ./build/webpack.dev.tool.js"
   },
   "author": "lanjie",
@@ -34,6 +35,11 @@
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^5.0.0",
     "postcss-import": "^12.0.1",
