--- a/package.json
+++ b/package.json
@@ -35,17 +35,24 @@
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.1",
+    "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.0.1",
+    "extract-loader": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "postcss-import": "^12.0.1",
+    "postcss-js": "^2.0.3",
+    "postcss-less": "^3.1.4",
     "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "postcss-url": "^8.0.0",
     "sass-resources-loader": "^2.0.1",
+    "style-loader": "^1.1.2",
     "units-loader": "^1.0.7",
     "url-loader": "^3.0.0",
     "vue-loader": "^15.8.3",
@@ -65,5 +72,10 @@
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
     "vux": "^2.9.4"
-  }
+   },
+   "browserslist": [
+     "> 1%",
+     "last 2 versions",
+     "not ie <= 8"
+   ]
 }
