--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
         "@babel/plugin-transform-arrow-functions",
         "@babel/plugin-transform-block-scoped-functions",
         "@babel/plugin-transform-block-scoping",
+        "@babel/plugin-syntax-dynamic-import",
         "@babel/plugin-transform-runtime",
         "@vue/babel-plugin-transform-vue-jsx",
         "@babel/plugin-transform-classes",
