--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --inspect-brk --config=build/webpack.dev.tool.js",
     "dome": "webpack-dev-server --inspect-brk --config=build/webpack.dome.dev.js",
-    "build": "webpack --config ./build/webpack.dev.tool.js"
+    "build": "webpack --config ./build/webpack.dev.tool.js",
+    "build:dome": "webpack --config ./build/webpack.dome.dev.js"
   },
   "author": "lanjie",
   "license": "ISC",
@@ -45,6 +46,7 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-js": "^2.0.3",
     "postcss-less": "^3.1.4",
@@ -53,6 +55,7 @@
     "postcss-url": "^8.0.0",
     "sass-resources-loader": "^2.0.1",
     "style-loader": "^1.1.2",
+    "sugarss": "^2.0.0",
     "units-loader": "^1.0.7",
     "url-loader": "^3.0.0",
     "vue-loader": "^15.8.3",
@@ -66,16 +69,18 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
+    "import-loader": "^1.0.1",
+    "imports-loader": "^0.8.0",
     "lib-flexible": "^0.3.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
     "vux": "^2.9.4"
-   },
-   "browserslist": [
-     "> 1%",
-     "last 2 versions",
-     "not ie <= 8"
-   ]
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
