--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --inspect-brk --config=build/webpack.dev.tool.js",
-    "dome": "webpack-dev-server --inspect-brk --config=build/webpack.dome.dev.js",
+    "demo": "webpack-dev-server --inspect-brk --config=build/webpack.dome.dev.js",
     "build": "webpack --config ./build/webpack.dev.tool.js",
-    "build:dome": "webpack --config ./build/webpack.dome.dev.js"
+    "build:demo": "webpack --config ./build/webpack.dome.dev.js"
   },
   "author": "lanjie",
   "license": "ISC",
