--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vux/loader": "^2.0.0-rc4",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.1",
     "cssnano": "^4.1.10",
@@ -44,9 +45,11 @@
     "eslint-plugin-vue": "^6.0.1",
     "extract-loader": "^3.1.0",
     "file-loader": "^5.0.2",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "markdown-loader": "^5.1.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-js": "^2.0.3",
@@ -70,8 +73,10 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
+    "highlight.js": "^9.18.1",
     "import-loader": "^1.0.1",
     "imports-loader": "^0.8.0",
+    "jquery": "^3.4.1",
     "lib-flexible": "^0.3.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.0.0",
