--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@vux/loader": "^2.0.0-rc4",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-remove-vconsole": "^1.0.0",
+    "babel-plugin-load-module": "^1.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.1",
@@ -45,11 +47,14 @@
     "eslint-plugin-vue": "^6.0.1",
     "extract-loader": "^3.1.0",
     "file-loader": "^5.0.2",
+    "filemanager-webpack-plugin": "^2.0.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "markdown-loader": "^5.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "ora": "^4.0.3",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-js": "^2.0.3",
@@ -57,29 +62,37 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "postcss-url": "^8.0.0",
+    "responsive-loader": "^1.2.0",
     "sass-resources-loader": "^2.0.1",
     "style-loader": "^1.1.2",
     "sugarss": "^2.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "units-loader": "^1.0.7",
     "url-loader": "^3.0.0",
+    "vconsole": "^3.3.4",
     "vue-loader": "^15.8.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "vux-loader": "^1.2.9",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
+    "axios": "^0.19.2",
     "highlight.js": "^9.18.1",
     "import-loader": "^1.0.1",
     "imports-loader": "^0.8.0",
     "jquery": "^3.4.1",
     "lib-flexible": "^0.3.2",
+    "qs": "^6.9.1",
+    "swiper": "^5.3.6",
     "vue": "^2.6.11",
     "vue-i18n": "^8.0.0",
+    "vue-qr": "^2.2.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
     "vux": "^2.9.4"
