--- a/.babelrc
+++ b/.babelrc
@@ -14,12 +14,6 @@
         "@babel/plugin-syntax-dynamic-import",
         "@babel/plugin-transform-runtime",
         "@vue/babel-plugin-transform-vue-jsx",
-        "babel-plugin-remove-vconsole",
-        ["babel-plugin-load-module", {
-            "cssPath": "@midea/pix-h5-components/dist/components/{key}/styles/{key}.css", //必须css路径
-            "jsPath": "@midea/pix-h5-components/dist/components/{key}", //js路径必须
-            "public": "@midea/pix-h5-components/dist/assets/fonts/iconfont.css", //公用css,可不传
-            "name": "@midea/pix-h5-components" //包名
-        }]
+        "babel-plugin-remove-vconsole"
     ]
 }
