--- a/package.json
+++ b/package.json
@@ -95,13 +95,15 @@
     "jquery": "^3.4.1",
     "js-xlsx": "^0.8.22",
     "lib-flexible": "^0.3.2",
+    "md5": "^2.2.1",
     "qs": "^6.9.1",
     "vue": "^2.6.11",
     "vue-i18n": "^8.0.0",
     "vue-qr": "^2.2.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
-    "vux": "^2.9.4"
+    "vux": "^2.9.4",
+    "xlsx": "^0.16.0"
   },
   "browserslist": [
     "> 1%",
