--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "imports-loader": "^0.8.0",
     "jquery": "^3.5.1",
     "lib-flexible": "^0.3.2",
+    "postcss-u2u": "^1.0.0",
     "qs": "^6.9.1",
     "swiper": "^5.3.6",
     "vue": "^2.6.11",
