--- a/package.json
+++ b/package.json
@@ -1,35 +1,57 @@
 {
-  "name": "project-tool",
-  "version": "1.0.0",
-  "description": "Mobile Project Initial chemical tool ",
-  "main": "index.js",
+  "version": "0.0.0",
   "scripts": {
-    "start": "webpack-dev-server --config=build/webpack.dev.tool.js",
-    "build": "webpack --config ./build/webpack.dev.tool.js"
-  },
-  "author": "lanjie",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "autoprefixer": "^9.7.3",
-    "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.1",
-    "html-webpack-plugin": "^3.2.0",
-    "less-loader": "^5.0.0",
-    "sass-resources-loader": "^2.0.1",
-    "units-loader": "^1.0.7",
-    "vue-loader": "^15.8.3",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview",
+    "demo": "webpack-dev-server --inspect-brk --config=build/webpack.dev.js"
   },
   "dependencies": {
-    "vue": "^2.6.11",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "@babel/core": "^7.14.6",
+    "@babel/polyfill": "^7.12.1",
+    "vue": "^3.1.2",
+    "vue-router": "^4.0.10"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-class-static-block": "^7.14.5",
+    "@babel/plugin-transform-classes": "^7.14.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-typescript": "^7.14.5",
+    "@vitejs/plugin-vue": "^1.2.3",
+    "@vue/babel-plugin-jsx": "^1.0.6",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/compiler-sfc": "^3.1.2",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-lodash": "^3.3.4",
+    "chalk": "^4.1.1",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.6",
+    "cssnano": "^5.0.6",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.0",
+    "mini-css-extract-plugin": "^1.6.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-u2u": "^1.0.0",
+    "postcss-url": "^10.1.3",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.2",
+    "url-loader": "^4.1.1",
+    "vite": "^2.3.8",
+    "vue-loader": "^16.1.2",
+    "vue-loader-v16": "npm:vue-loader@^16.2.0",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.6.14",
+    "vue-tsc": "^0.0.24",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
   }
 }
