--- a/package.json
+++ b/package.json
@@ -1,57 +1,106 @@
 {
+  "name": "project-tool",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview",
-    "demo": "webpack-dev-server --inspect-brk --config=build/webpack.dev.js"
+    "dev": "npm run dev:vite",
+    "build": "npm run build:webpack",
+    "dev:vite": "vite",
+    "build:vite": "vue-tsc --noEmit && vite build",
+    "serve:vite": "vite preview",
+    "demo": "webpack-dev-server --inspect-brk --config=build/webpack.dev.js",
+    "dev:webpack": "vue-cli-service serve",
+    "build:webpack": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@babel/core": "^7.14.6",
+    "@babel/core": "^7.15.8",
     "@babel/polyfill": "^7.12.1",
-    "vue": "^3.1.2",
-    "vue-router": "^4.0.10"
+    "vue": "^3.2.20",
+    "vue-router": "^4.0.12",
+    "core-js": "^3.6.5",
+    "register-service-worker": "^1.7.1",
+    "vue-class-component": "^8.0.0-0",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-class-static-block": "^7.14.5",
-    "@babel/plugin-transform-classes": "^7.14.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.7",
-    "@babel/preset-typescript": "^7.14.5",
-    "@vitejs/plugin-vue": "^1.2.3",
-    "@vue/babel-plugin-jsx": "^1.0.6",
-    "@vue/cli-plugin-babel": "^4.5.13",
-    "@vue/compiler-sfc": "^3.1.2",
-    "babel-loader": "^8.2.2",
+    "@babel/plugin-proposal-class-static-block": "^7.15.4",
+    "@babel/plugin-transform-classes": "^7.15.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/jest": "^24.0.19",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "@vitejs/plugin-vue": "^1.9.3",
+    "@vue/babel-plugin-jsx": "^1.1.1",
+    "@vue/cli-plugin-babel": "^4.5.14",
+    "@vue/cli-plugin-e2e-nightwatch": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.2.20",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/test-utils": "^2.0.0-0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.3",
     "babel-plugin-lodash": "^3.3.4",
-    "chalk": "^4.1.1",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^5.2.6",
-    "cssnano": "^5.0.6",
+    "chalk": "^4.1.2",
+    "css-loader": "^5.2.7",
+    "cssnano": "^5.0.8",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^7.0.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "less": "^4.1.1",
-    "less-loader": "^10.0.0",
-    "mini-css-extract-plugin": "^1.6.1",
-    "postcss-cssnext": "^3.1.0",
+    "less": "^4.1.2",
+    "less-loader": "^7.0.0",
+    "lint-staged": "^9.5.0",
+    "mini-css-extract-plugin": "^1.6.2",
+    "postcss-cssnext": "^3.1.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "postcss-u2u": "^1.0.0",
     "postcss-url": "^10.1.3",
-    "ts-loader": "^9.2.3",
-    "typescript": "^4.3.2",
+    "prettier": "^2.2.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
     "url-loader": "^4.1.1",
-    "vite": "^2.3.8",
-    "vue-loader": "^16.1.2",
-    "vue-loader-v16": "npm:vue-loader@^16.2.0",
+    "vite": "^2.6.10",
+    "vue-jest": "^5.0.0-0",
+    "vue-loader": "^16.8.1",
+    "vue-loader-v16": "npm:vue-loader@^16.8.1",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.6.14",
     "vue-tsc": "^0.0.24",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
-  }
+    "webpack": "^4.1.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
