--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@babel/core": "^7.15.8",
         "@babel/polyfill": "^7.12.1",
+        "@element-plus/icons": "0.0.11",
         "core-js": "^3.6.5",
         "element-plus": "^1.1.0-beta.24",
         "register-service-worker": "^1.7.1",
@@ -76,8 +77,10 @@
         "postcss-url": "^10.1.3",
         "prettier": "^2.2.1",
         "sass": "^1.45.2",
+        "sass-loader": "^10.2.0",
         "ts-loader": "^9.2.6",
         "typescript": "^4.4.4",
+        "unplugin-auto-import": "^0.5.5",
         "unplugin-vue-components": "^0.16.0",
         "url-loader": "^4.1.1",
         "vite": "^2.6.10",
