--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     "baseUrl": ".",
     "types": [
       "webpack-env",
-      "jest",
-      "element-plus/global"
+      "jest"
     ],
     "paths": {
       "@/*": [
