--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^0.2.4",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
     "element-plus": "^1.1.0-beta.24",
     "register-service-worker": "^1.7.2",
     "vue": "^3.0.0",
@@ -58,6 +59,7 @@
     "typescript": "~4.1.5",
     "unplugin-auto-import": "^0.5.9",
     "unplugin-vue-components": "^0.17.11",
+    "vconsole": "^3.11.2",
     "vite": "^2.7.10",
     "vue-jest": "^5.0.0-0"
   }
