--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss-u2u": "^1.0.0",
     "sass": "^1.48.0",
     "sass-loader": "^8.0.2",
+    "tslint": "^6.1.3",
     "typescript": "~4.1.5",
     "unplugin-auto-import": "^0.5.9",
     "unplugin-vue-components": "^0.17.11",
